--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                     <div class="faq-question">
                         <h3>
                         <!------------------------------------------- edit text below ------------------------------------------->
-                        Can I afford career counseling?
+                        Do you assist Service members and/or Veterans?
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </h3>
                         <span class="toggle-icon">+</span>
@@ -263,7 +263,7 @@
                     <div class="faq-answer">
                         <p>
                             <!------------------------------------------- edit text below ------------------------------------------->
-                        Yes! And the number of sessions depends on each person's needs. It can be as few as 2 or many as 20. I have a sliding fee schedule that we can discuss further. 
+                        Absolutely. I have worked in non-profits for persons with disabilities as well as within the government, assisting Service members and Veterans with and without disabilities. 
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </p>
                     </div>
@@ -273,15 +273,15 @@
                     <div class="faq-question">
                         <h3>
                             <!------------------------------------------- edit text below ------------------------------------------->
-                        Ask Question here
+                        Can I afford career counseling?
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </h3>
                         <span class="toggle-icon">+</span>
                     </div>
                     <div class="faq-answer">
                         <p>
-                            <!------------------------------------------- edit text below ------------------------------------------->
-                        Answer question here
+                            <!------------------------------------------- edit text below ------------------------------------------->         Yes! And the number of sessions depends on each person's needs. It can be as few as 2 or as many as 20 sessions. I am here with you all the way. 
+    
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </p>
                     </div>
@@ -291,7 +291,7 @@
                     <div class="faq-question">
                         <h3>
                         <!------------------------------------------- edit text below ------------------------------------------->
-                        Ask Question here
+                        What are your rates?
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </h3>
                         <span class="toggle-icon">+</span>
@@ -299,7 +299,15 @@
                     <div class="faq-answer">
                         <p>
                             <!------------------------------------------- edit text below ------------------------------------------->
-                        Answer question here
+                        •	FREE 20-minute consultation
+                        •	Career counseling session for 50 minutes at $150
+                        •	Special career counseling bundle for just $600 includes: 
+                            •	20 Min Free Consultation
+                            •	Career Counseling Intake Session
+                            •	Career Assessments
+                            •	Career Counseling Results Overview
+                            •	Career Report
+                            •	Resume Development/Review 
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </p>
                     </div>
