--- a/index.html
+++ b/index.html
@@ -182,28 +182,28 @@
                 <div class="section-col">
                     <div class="cloud-container no-scrollbar">
                         <div class="cloud cloud4 cloud-left">
-                            <p>Career counseling/coaching</p>
+                            <p>Career Counseling/Coaching</p>
                         </div>
                         <div class="cloud cloud3 cloud-right">
-                            <p>Job coaching</p>
+                            <p>Job Coaching</p>
                         </div>
                         <div class="cloud cloud2 cloud-left">
-                            <p>Vocational assessments</p>
+                            <p>Vocational Assessments</p>
                         </div>
                         <div class="cloud cloud1 cloud-right">
-                            <p>Vocational evaluations </p>
+                            <p>Vocational Evaluations </p>
                         </div>
                         <div class="cloud cloud4 cloud-right">
-                            <p>Situational work assessments</p>
+                            <p>Situational Work Assessments</p>
                         </div>
                         <div class="cloud cloud2 cloud-left">
-                            <p>Job task analysis </p>
+                            <p>Job Task Analysis </p>
                         </div>
                         <div class="cloud cloud3 cloud-right">
-                            <p>Transferrable skills analysis</p>
+                            <p>Transferrable Skills Analysis</p>
                         </div>
                         <div class="cloud cloud1 cloud-left">
-                            <p>Labor market survey and analysis</p>
+                            <p>Labor Market Survey and Analysis</p>
                         </div>
                     </div>
 
@@ -281,7 +281,6 @@
                     <div class="faq-answer">
                         <p>
                             <!------------------------------------------- edit text below ------------------------------------------->         Yes! And the number of sessions depends on each person's needs. It can be as few as 2 or as many as 20 sessions. I am here with you all the way. 
-    
                         <!------------------------------------------- edit text above ------------------------------------------->
                         </p>
                     </div>
