chore: edit about me

--- a/index.html
+++ b/index.html
@@ -320,6 +320,12 @@
             <h1>About Me</h1>
             <!-- photo of founder -->
 
+                        <!------------------------------------------- edit text above ------------------------------------------->
+                        <div id="about-me-para">
+                            <p id="about-me-para-actual"></p>
+                        </div>
+                        <!------------------------------------------- edit text above ------------------------------------------->
+            
             <!-- certifications  -->
           </section>
 
