--- a/index.html
+++ b/index.html
@@ -320,9 +320,12 @@
             <h1>About Me</h1>
             <!-- photo of founder -->
 
+
                         <!------------------------------------------- edit text above ------------------------------------------->
                         <div id="about-me-para">
-                            <p id="about-me-para-actual"></p>
+                            <p id="about-me-para-actual">As a Certified Rehabilitation Counselor and former Vocational Rehabilitation Counselor with the U.S. Department of Veterans Affairs, I expertly conducted vocational assessments and labor market analyses to empower Veterans and Servicemembers in securing meaningful employment. I have a proven track record of evaluating aptitudes and transforming those insights into strategic career recommendations that are closely aligned with client goals and local job market trends.
+
+I am excited to bring out your best self and am confident in my ability to support you on your journey. Thank you for considering VC Career Counseling and Coaching. I look forward to collaborating with you—contact me today!</p>
                         </div>
                         <!------------------------------------------- edit text above ------------------------------------------->
             
